@@ -1,3 +1,8 @@
+2010-05-13  Jason Merrill  <jason@redhat.com>
+
+	PR c++/43787
+	* g++.dg/opt/empty1.C: New.
+
 2010-05-12  Jakub Jelinek  <jakub@redhat.com>
 
 	PR middle-end/44085
